log
ju., 20 de abr. de 2023 17:59:10: 
 treemap.c | 8 ++++++++
 1 file changed, 8 insertions(+)
 tests:  4|7
total_score: 5/70
11efe08
ju., 20 de abr. de 2023 18:05:49: 
 treemap.c | 21 +++++++++++++++++++++
 1 file changed, 21 insertions(+)
 tests:  11|6
total_score: 15/70
28bc8db
ju., 20 de abr. de 2023 18:21:43: 
 treemap.c | 42 ++++++++++++++++++++++++++++++++++++++++++
 1 file changed, 42 insertions(+)
 tests:  12|6
total_score: 15/70
cb50c9a
ju., 20 de abr. de 2023 18:22:27: 
 treemap.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  13|5
total_score: 25/70
ab724ad
ju., 20 de abr. de 2023 18:43:58: 
 treemap.c | 13 +++++++++++--
 1 file changed, 11 insertions(+), 2 deletions(-)
 tests:  15|4
total_score: 25/70
b15804b
ju., 20 de abr. de 2023 18:59:06: 
 treemap.c | 47 +++++++++++++++++++++++++++++++++++++++++++++++
 1 file changed, 47 insertions(+)
 tests:  0|0
aee37f9
ju., 20 de abr. de 2023 18:59:44: 
 treemap.c | 3 +++
 1 file changed, 3 insertions(+)
 tests:  0|0
d15efbd
ju., 20 de abr. de 2023 19:02:15: 
 treemap.c | 27 +++++++++++++++++++--------
 1 file changed, 19 insertions(+), 8 deletions(-)
 tests:  16|4
total_score: 30/70
9ee69d4
ju., 20 de abr. de 2023 19:05:22: 
 treemap.c | 4 ++++
 1 file changed, 4 insertions(+)
 tests:  18|3
total_score: 40/70
67bdfc3
ju., 20 de abr. de 2023 19:09:18: 
 treemap.c | 7 ++++++-
 1 file changed, 6 insertions(+), 1 deletion(-)
 tests:  20|2
total_score: 45/70
d72e3ea
ju., 20 de abr. de 2023 21:16:27: 
 treemap.c | 25 ++++++++++++++++++++++++-
 1 file changed, 24 insertions(+), 1 deletion(-)
 tests:  0|0
1165277
ju., 20 de abr. de 2023 21:17:59: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
b432142
ju., 20 de abr. de 2023 21:20:07: 
 treemap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  0|0
c5be772
ju., 20 de abr. de 2023 21:23:33: 
 treemap.c | 21 +++++++++++++++------
 1 file changed, 15 insertions(+), 6 deletions(-)
 tests:  25|1
total_score: 60/70
cf23e1f
ju., 20 de abr. de 2023 21:24:48: 
 treemap.c | 14 ++++++--------
 1 file changed, 6 insertions(+), 8 deletions(-)
 tests:  25|1
total_score: 60/70
5c78782
ju., 20 de abr. de 2023 21:38:38: 
 treemap.c | 34 +++++++++++++++++++++++++++++++++-
 1 file changed, 33 insertions(+), 1 deletion(-)
In file included from test.c:4:0:
treemap.c: In function 'upperBound':
treemap.c:229:29: error: initialization from incompatible pointer type [-Werror=incompatible-pointer-types]
     TreeNode* nodoBuscado = searchTreeMap(tree, key);
                             ^~~~~~~~~~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
f55bd7b
ju., 20 de abr. de 2023 21:40:08: 
 treemap.c | 6 ++----
 1 file changed, 2 insertions(+), 4 deletions(-)
 tests:  26|1
total_score: 60/70
fc44ecf
ju., 20 de abr. de 2023 21:42:20: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  26|1
total_score: 60/70
616c088
ju., 20 de abr. de 2023 21:46:30: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  28|1
total_score: 65/70
f9725c7
ju., 20 de abr. de 2023 21:49:25: 
 treemap.c | 5 +++++
 1 file changed, 5 insertions(+)
 tests:  29|0
total_score: 70/70
883bbcd
